// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackForm /> renders if user is no satisfied 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c1 {
  margin-bottom: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 2rem;
}

<div>
  <form
    action="https://formspree.io/xbalrgzm"
    class="c0"
  >
    <p>
      <strong>
        Merci pour votre réponse !
      </strong>
    </p>
    <p>
      Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
    </p>
    <input
      name="question"
      type="hidden"
      value="Initial query"
    />
    <input
      name="url"
      type="hidden"
      value="led zeppelin"
    />
    <input
      name="sourceType"
      type="hidden"
      value="Fiches Service Public"
    />
    <select
      class="c1"
      name="motif"
    >
      <option
        value="Les informations proposées ne sont pas à jour"
      >
        Les informations proposées ne sont pas à jour
      </option>
      <option
        value="Les informations me paraissent erronées"
      >
        Les informations me paraissent erronées
      </option>
      <option
        value="Les informations me paraissent incomplètes"
      >
        Les informations me paraissent incomplètes
      </option>
      <option
        value="Les informations me paraissent hors-sujet"
      >
        Les informations me paraissent hors-sujet
      </option>
      <option
        value="Je n'ai pas trouvé la réponse à ma question"
      >
        Je n'ai pas trouvé la réponse à ma question
      </option>
    </select>
    <textarea
      class="c1"
      name="message"
      placeholder="Les informations ..."
    />
    <div
      class="c2"
    >
      <button
        class="c3"
      >
        Envoyer mon commentaire
      </button>
      <div
        class="c4"
      />
    </div>
  </form>
</div>
`;

exports[`<FeedbackForm /> renders if user is satisfied 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c1 {
  margin-bottom: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 2rem;
}

<div>
  <form
    action="https://formspree.io/xbalrgzm"
    class="c0"
  >
    <p>
      <strong>
        Merci pour votre réponse !
      </strong>
    </p>
    <p>
      Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
    </p>
    <input
      name="question"
      type="hidden"
      value="Initial query"
    />
    <input
      name="url"
      type="hidden"
      value="led zeppelin"
    />
    <input
      name="sourceType"
      type="hidden"
      value="Fiches Service Public"
    />
    <textarea
      class="c1"
      name="message"
      placeholder="Les informations ..."
    />
    <div
      class="c2"
    >
      <button
        class="c3"
      >
        Envoyer mon commentaire
      </button>
      <div
        class="c4"
      />
    </div>
  </form>
</div>
`;
